// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionAndCancelButtonsComponent render with primary button href == null 1`] = `
<div
  className="actionAndCancelButtonsComponent"
  hidden={false}
>
  <div
    className="actionCancelButtonCol"
  >
    <CustomizedDefaultButton
      onClick={[Function]}
      text="Cancel"
    />
  </div>
  <div
    className="actionCancelButtonCol"
  >
    <CustomizedDefaultButton
      disabled={false}
      href={null}
      onClick={[Function]}
      primary={true}
      target="_self"
      text="Test"
    />
  </div>
</div>
`;

exports[`ActionAndCancelButtonsComponent render with primary button href == sample href 1`] = `
<div
  className="actionAndCancelButtonsComponent"
  hidden={false}
>
  <div
    className="actionCancelButtonCol"
  >
    <CustomizedDefaultButton
      onClick={[Function]}
      text="Cancel"
    />
  </div>
  <div
    className="actionCancelButtonCol"
  >
    <CustomizedDefaultButton
      disabled={false}
      href="sample href"
      onClick={[Function]}
      primary={true}
      target="_blank"
      text="Test"
    />
  </div>
</div>
`;
